fixed overlap of bottom border for large screens of retry page

--- a/frontend/src/components/cafe/cafe.scss
+++ b/frontend/src/components/cafe/cafe.scss
@@ -266,7 +266,7 @@
         width:470px;
         padding-left:20px;
         padding-right:20px;
-        background-color:green;
+        // background-color:green;
     }
 
     .photo{
@@ -354,7 +354,7 @@
         width:500px;
         padding-left:20px;
         padding-right:20px;
-        background-color:pink;
+        // background-color:pink;
     }
 
     .photo{
@@ -372,7 +372,7 @@
     .profile{
         padding-top:30px;
         padding-bottom:28px;
-        background-color:purple;
+        // background-color:purple;
     }
 
     .photo{
@@ -405,7 +405,7 @@
     .profile{
         padding-top:30px;
         padding-bottom:28px;
-        background-color:blue;
+        // background-color:blue;
     }
 
     .photo{
@@ -442,7 +442,7 @@
     .profile{
         padding-top:30px;
         padding-bottom:28px;
-        background-color:yellow;
+        // background-color:yellow;
     }
 
     .photo{
