--- a/frontend/src/components/retry/retry.scss
+++ b/frontend/src/components/retry/retry.scss
@@ -112,3 +112,24 @@
     font-size: 14px;
     font-weight: 100;
 }
+
+#looking-for-2 > li{
+    padding-left:5px;
+    padding-top:3px;
+    // list-style-type: none;
+}
+
+#looking-for-2 > #firstLookForLi{
+    padding-top:8px;
+}
+
+
+
+
+@media only screen and (min-width: 1450px){
+    .new-test{
+        // background:lightgreen;
+        height:465px;
+
+    }
+}
